# agt_navigation_v2

./: .gitignore  AGENTS.md  CODEX_AGT_SEMANTIC_COVERAGE_TASK_SPEC.md  README.md  agt_navigation_v2_项目总体方案.md  agt_navigation_v2_项目总体方案汇报稿.docx  nav_dependencies.repos  readme.md
src/agt_bringup/: CMakeLists.txt  README.md  package.xml
src/agt_bringup/config/: README.md  mapping.rviz
src/agt_bringup/launch/: bag_record.launch.py  mapping_mode.launch.py  navigation_system.launch.py  save_mapping_result.launch.py  system.launch.py
src/agt_bringup/test/: test_bunker_qt5_baseline.py
src/agt_chassis/: CMakeLists.txt  README.md  package.xml
src/agt_chassis/config/: README.md  bunker.yaml
src/agt_chassis/launch/: README.md  bunker.launch.py
src/agt_chassis/scripts/: bunker_status_bridge.py  chassis_command_guard.py
src/agt_chassis/src/: README.md
src/agt_coverage_planning/: CMakeLists.txt  README.md  package.xml
src/agt_coverage_planning/agt_coverage_planning/: __init__.py  coverage_adapter.py  coverage_task.py  path_repair.py  path_semantics.py  path_validator.py  time_simulation.py  variant_comparison.py
src/agt_coverage_planning/config/: README.md  coverage_planning.yaml  coverage_variants.yaml
src/agt_coverage_planning/launch/: README.md  coverage_comparison.launch.py  coverage_planning.launch.py  coverage_preview.launch.py
src/agt_coverage_planning/rviz/: coverage_preview.rviz
src/agt_coverage_planning/scripts/: coverage_path_repair.py  coverage_path_validator.py  coverage_request_adapter.py  coverage_task_server.py  coverage_time_simulator.py  coverage_variant_comparator.py
src/agt_coverage_planning/src/: README.md
src/agt_coverage_planning/test/: test_coverage_adapter.py  test_coverage_comparison_launch.py  test_coverage_preview_launch.py  test_coverage_request_adapter_node.py  test_coverage_task.py  test_coverage_task_server_node.py  test_path_repair.py  test_path_repair_node.py  test_path_semantics.py  test_path_validator.py  test_path_validator_node.py  test_time_simulation.py  test_time_simulator_node.py  test_variant_comparator_node.py  test_variant_comparison.py
src/agt_description/: CMakeLists.txt  README.md  package.xml
src/agt_description/config/: README.md  bunker_mid360.yaml  mk_mini_mid360.yaml
src/agt_description/launch/: bunker_description.launch.py  description.launch.py
src/agt_description/test/: test_tf_contract.py
src/agt_description/urdf/: agt_base.urdf.xacro
src/agt_interfaces/: CMakeLists.txt  README.md  package.xml
src/agt_interfaces/action/: ExecuteCoverageTask.action  README.md
src/agt_interfaces/msg/: README.md
src/agt_interfaces/srv/: README.md
src/agt_interfaces/test/: test_execute_coverage_task.cpp  test_execute_coverage_task_serialization.py
src/agt_localization/: CMakeLists.txt  README.md  package.xml
src/agt_localization/config/: README.md  relocalization.yaml
src/agt_localization/include/agt_localization/: ros_conversions.hpp
src/agt_localization/launch/: README.md  relocalization.launch.py
src/agt_localization/src/: README.md  relocalization_node.cpp
src/agt_map_processing/: CMakeLists.txt  README.md  package.xml
src/agt_map_processing/config/: README.md  octomap_projection.yaml
src/agt_map_processing/launch/: README.md  octomap_projection.launch.py  save_occupancy_map.launch.py
src/agt_map_processing/src/: README.md
src/agt_map_processing/test/: test_octomap_projection.py
src/agt_mapping/: CMakeLists.txt  README.md  package.xml
src/agt_mapping/config/: README.md  camera_disabled_placeholder.yaml  fast_livo2_adapter.yaml  mid360_lio_only.yaml
src/agt_mapping/launch/: README.md  fast_livo2_mapping.launch.py
src/agt_mapping/patches/: fast_livo2_cmake_portability.patch  fast_livo2_lidar_frame_cloud.patch  fast_livo2_publish_tf.patch
src/agt_mapping/scripts/: fast_livo2_adapter.py
src/agt_mapping/src/: README.md
src/agt_mapping/test/: test_fast_livo2_adapter.py
src/agt_navigation/: CMakeLists.txt  README.md  package.xml
src/agt_navigation/behavior_trees/: README.md  navigate_to_pose.xml
src/agt_navigation/config/: README.md  nav2_bunker.yaml
src/agt_navigation/launch/: README.md  navigation.launch.py  offline_navigation.launch.py
src/agt_navigation/maps/: offline_test.pgm  offline_test.yaml
src/agt_navigation/scripts/: differential_drive_simulator.py  goal_pose_bridge.py
src/agt_perception/: CMakeLists.txt  README.md  package.xml
src/agt_perception/config/: README.md  local_obstacle_filter.yaml
src/agt_perception/launch/: README.md  local_obstacles.launch.py
src/agt_perception/src/: README.md  local_obstacle_filter.cpp
src/agt_sensor_adapters/: CMakeLists.txt  README.md  package.xml
src/agt_sensor_adapters/config/: README.md  mid360_network.json
src/agt_sensor_adapters/launch/: README.md  mid360.launch.py
src/agt_sensor_adapters/src/: README.md
src/agt_ui_bridge/: CMakeLists.txt  README.md  package.xml
src/agt_ui_bridge/agt_ui_bridge/: __init__.py  coverage_preview.py  map_image.py  map_transform.py  platform_profile.py  semantic_io.py  semantic_model.py  semantic_rasterizer.py  semantic_scene.py  semantic_validation.py
src/agt_ui_bridge/config/: README.md  map_io.yaml  ros_qt5_gui_app.json  ros_qt5_gui_mapping.json  ros_qt5_gui_navigation.json  semantic_editor.yaml  semantic_map_server.yaml  semantic_schema.yaml
src/agt_ui_bridge/launch/: README.md  map_editor.launch.py  ros_qt5_gui.launch.py  semantic_editor.launch.py  semantic_map_server.launch.py
src/agt_ui_bridge/scripts/: map_editor_qt5.py  map_io_bridge.py  semantic_editor_qt5.py  semantic_map_server.py  start_ros_qt5_gui_app.sh
src/agt_ui_bridge/src/: README.md
src/agt_ui_bridge/test/: test_coverage_preview.py  test_map_io.py  test_map_transform.py  test_ros_qt5_gui_profiles.py  test_semantic_editor.py  test_semantic_io.py  test_semantic_map_server.py  test_semantic_rasterizer.py  test_semantic_scene.py  test_semantic_validation.py
tests/: test_bunker_integration.py  test_cloudcompare_runtime_map_tool.py  test_coverage_bringup_contracts.py  test_mid360_bag_conversion.py  (+7 more)
(+64 files in other folders)
