<?xml version="1.0"?>
<package format="3">
  <name>agt_chassis</name>
  <version>0.1.0</version>
  <description>Unified chassis command and status bridge.</description>
  <maintainer email="yangxuan@example.com">yangxuan</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>agt_safety</exec_depend>
  <exec_depend>bunker_base</exec_depend>
  <exec_depend>bunker_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
