<?xml version="1.0"?>
<package format="3">
  <name>agt_coverage_planning</name>
  <version>0.1.0</version>
  <description>Coverage planning adapters for agricultural workflows.</description>
  <maintainer email="yangxuan@example.com">yangxuan</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>agt_interfaces</exec_depend>
  <exec_depend>agt_ui_bridge</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>opennav_coverage</exec_depend>
  <exec_depend>opennav_coverage_msgs</exec_depend>
  <exec_depend>opennav_row_coverage</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-shapely</exec_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-shapely</test_depend>
  <test_depend>agt_interfaces</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
