<?xml version="1.0"?>
<package format="3">
  <name>agt_interfaces</name>
  <version>0.1.0</version>
  <description>Unified interfaces for agt_navigation_v2.</description>
  <maintainer email="yangxuan@example.com">yangxuan</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
