<?xml version="1.0"?>
<package format="3">
  <name>agt_sensor_adapters</name>
  <version>0.1.0</version>
  <description>Sensor adapters to unified AGT topics.</description>
  <maintainer email="yangxuan@example.com">yangxuan</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
